[tool.poetry]
name = "ttbloader"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
psycopg2 = "^2.9.5"
dbfread = "^2.0.7"
pyinstaller = "^5.7.0"
xlrd = "1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
